--- a/src/components/article/article.css
+++ b/src/components/article/article.css
@@ -42,8 +42,12 @@
     cursor: pointer;
 }
 
-.gpt3__blog-container_article-content p:last-child {
+.gpt3__blog-container_article-content a {
     cursor: pointer;
+    font-family: var(--font-family);
+    font-size: 12px;
+    line-height: 30px;
+    color: #ffffff;
 }
 
 @media screen and (max-width: 550px) {
